--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
         
         <!--Introduction-->
         <section id="about-me" class="intro">
-            <p>...</p>
+            <div>
+                <h2>About Me</h2>
+            </div>
+            <div>
+                <p>My name is Purvi Mecwan. I am self employed at financial company named Payday Loan Direct and curruntly live in St.Catherines Ontario. I am recently working on my way to persue certificate from UofT of continuing study as web developer. Here are some of my work.  </p>
+            </div>
         </section>
 
         <!--Work-->
@@ -49,7 +54,6 @@
 
             <div class="work-description">
                 <div class="run-buddy">
-                    <img src="" />
                     <h3>
                         <a href="https://purvimec.github.io/run-buddy/" alt="run-buddy website">
                             Run-Buddy
