--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         </section>
         
         <!--Introduction-->
-        <section id="about-me" class="intro">
+        <section id="about-me" class="float-left">
             <div>
                 <h2>About Me</h2>
             </div>
-            <div>
+            <div class="float-right">
                 <p>My name is Purvi Mecwan. I am self employed at financial company named Payday Loan Direct and curruntly live in St.Catherines Ontario. I am recently working on my way to persue certificate from UofT of continuing study as web developer. Here are some of my work.  </p>
             </div>
         </section>
@@ -99,28 +99,26 @@
 
     <!--footer-->   
     <footer id="contact-info" class="contact-me">
-        <div>
-            <h2>Contact Me</h2>
-        </div>
-        <div>
-            <ul>
-                <li>
-                    <a href="tel:226-260-0208">226-260-0208</a>
-                </li>
-                <li>
-                    <a href="mailto:princy.mecwan94@gmail.com">princy.mecwan94@gmail.com</a>
-                </li>
-                <li>
-                    <a href="https://purvimec.github.io/myportfolio/">github</a>
-                </li>
-                <li>
-                    <a href="">Twitter</a>
-                </li>
-                <li>
-                    <a href="">Indeed Profile</a>
-                </li>
-            </ul>
-        </div>
+        <h2>
+            Contact Me
+        </h2>
+        <ul>
+            <li>
+                <a href="tel:226-260-0208">226-260-0208</a>
+            </li>
+            <li>
+                <a href="mailto:princy.mecwan94@gmail.com">Email Address</a>
+            </li>
+            <li>
+                <a href="https://purvimec.github.io/myportfolio/">github</a>
+            </li>
+            <li>
+                <a href="">Twitter</a>
+            </li>
+            <li>
+                <a href="">Indeed Profile</a>
+            </li>
+        </ul>
     </footer>
 
     
