--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
         </section>
         
         <!--Introduction-->
-        <section id="about-me" class="float-left">
-            <div>
+        <section id="about-me" class="intro">
+            <div class="intro-header">
                 <h2>About Me</h2>
             </div>
-            <div class="float-right">
+            <div class="intro-detail">
                 <p>My name is Purvi Mecwan. I am self employed at financial company named Payday Loan Direct and curruntly live in St.Catherines Ontario. I am recently working on my way to persue certificate from UofT of continuing study as web developer. Here are some of my work.  </p>
             </div>
         </section>
 
         <!--Work-->
         <section id="my-work" class="work">
-            <div class="work">
+            <div class="work-header">
                 <h2>Work</h2>
             </div>
 
@@ -61,7 +61,7 @@
                     </h3>
 
                 </div>
-                <div>
+                <div class="work-discription2">
                     <div class="homework1">
                         <h3>
                             <a href="https://purvimec.github.io/week1assignment/" alt="homework1">
@@ -71,27 +71,29 @@
                     </div>
 
                     
-                    <div class="2">
-                        <img src="" />
+                    <div class="assignment1">
                         <h3>
-
+                            <a href="./assets/images/mycutie.jpeg" alt="my husky" >
+                                Oscar The Husky 
+                            </a>    
                         </h3>
                     </div>
 
-                    <div class="3">
-                        <img src="" />
+                    <div class="assignment2">
                         <h3>
-
+                            <a href="./assets/images/favpokemon.jpg" alt="pokemon fan-page" >
+                                My Pokemon page
+                            </a>
                         </h3>
 
                     </div>
 
-                    <div class="4">
-                        <img src="" />
+                    <div class="assignment3">
                         <h3>
-
+                            <a href="./assets/images/favcartoon.jpeg" alt="cartoon-network">
+                                Golden Era of Cartoons
+                            </a>
                         </h3>
-
                     </div>
                 </div>
             </div>
