--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="run-buddy">
                     <h3>
                         <a href="https://purvimec.github.io/run-buddy/" alt="run-buddy website">
-                            Run-Buddy
+                            <button type="Run-Buddy">Run-Buddy</button>
                         </a>
                     </h3>
 
@@ -65,7 +65,7 @@
                     <div class="homework1">
                         <h3>
                             <a href="https://purvimec.github.io/week1assignment/" alt="homework1">
-                                Week 1 Assignment
+                                <button type="homework1">Week 1 Assignment</button>
                             </a>
                         </h3>
                     </div>
@@ -74,7 +74,7 @@
                     <div class="assignment1">
                         <h3>
                             <a href="./assets/images/mycutie.jpeg" alt="my husky" >
-                                Oscar The Husky 
+                                <button type="my-husky">Oscar The Husky</button>
                             </a>    
                         </h3>
                     </div>
@@ -82,7 +82,7 @@
                     <div class="assignment2">
                         <h3>
                             <a href="./assets/images/favpokemon.jpg" alt="pokemon fan-page" >
-                                My Pokemon page
+                                <button type="pokemon-fan-page">My Pokemon Page</button>
                             </a>
                         </h3>
 
@@ -91,7 +91,7 @@
                     <div class="assignment3">
                         <h3>
                             <a href="./assets/images/favcartoon.jpeg" alt="cartoon-network">
-                                Golden Era of Cartoons
+                                <button type="cartoon-network">Golden Era of Cartoons</button>
                             </a>
                         </h3>
                     </div>
