--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <header>
         <h1>
-            <a href="/">Purvi Mecwan</a>
+            Purvi Mecwan
         </h1>
         <nav>
             <ul>
@@ -33,15 +33,15 @@
 
         <!--Subtitle-->
         <section class="hero">
-                <h2>Welcome to My Portfolio</h2>
+            <h2>Welcome to My Portfolio</h2>
         </section>
         
         <!--Introduction-->
         <section id="about-me" class="intro">
-            <div class="intro-header">
+            <div>
                 <h2>About Me</h2>
             </div>
-            <div class="intro-detail">
+            <div>
                 <p>My name is Purvi Mecwan. I am self employed at financial company named Payday Loan Direct and curruntly live in St.Catherines Ontario. I am recently working on my way to persue certificate from UofT of continuing study as web developer. Here are some of my work.  </p>
             </div>
         </section>
