adjustments in intro and work

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <a href="">Twitter</a>
             </li>
             <li>
-                <a href="">Indeed Profile</a>
+                <a href="https://www.linkedin.com/in/purvi-mecwan/">Indeed Profile</a>
             </li>
         </ul>
     </footer>
