complete desktop friendly virsion

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <header>
         <h1>
-            Purvi Mecwan
+            <a href="./assets/images/IMG_1022.jpg">Purvi Mecwan</a>
         </h1>
         <nav>
             <ul>
@@ -25,7 +25,7 @@
                     <a href="#contact-info">Contact Me</a>
                 </li>
                 <li>
-                    <a href="/">Resume</a>
+                    <a href="./assets/images/Purvi Mecwan resume.pages">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -115,7 +115,7 @@
                 <a href="https://purvimec.github.io/myportfolio/">github</a>
             </li>
             <li>
-                <a href="">Twitter</a>
+                <a href="/">Twitter</a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/purvi-mecwan/">Indeed Profile</a>
