media screen 980px

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <a href="https://purvimec.github.io/myportfolio/">github</a>
             </li>
             <li>
-                <a href="/">Twitter</a>
+                <a href="@mecwan">Twitter</a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/purvi-mecwan/">Indeed Profile</a>
