--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
                 <div class="assignment2">
                     <h3>
-                        <a href="./assets/images/favpokemon.jpg" alt="pokemon fan-page" >
-                            <button type="pokemon-fan-page">My Pokemon Page</button>
+                        <a href="https://med-i-search.herokuapp.com/" alt="pokemon fan-page" >
+                            <button type="MEDiSEARCH">MEDiSEARCH</button>
                         </a>
                     </h3>
                 </div>
